# opendbs

./: .env.example  DEPLOYMENT.md  LICENSE  LICENSE.md  QUICKSTART.md  README.md  README_BUILD.md  package.json
OPENDBSBUILD/: LICENSE.md  QUICKSTART.md  README.md  README_BUILD.md  package-lock.json
OPENDBSBUILD/examples/: basic-usage.js
OPENDBSBUILD/public/: index.html
OPENDBSBUILD/public/js/: app.js
OPENDBSBUILD/rust-engine/: Cargo.toml
OPENDBSBUILD/rust-engine/src/: compression.rs  error.rs  index.rs  lib.rs  query.rs
examples/: README.md
public/: login.html
public/css/: style.css
rust-engine/src/: storage.rs
