[package]
name = "opendbs-engine"
version = "0.1.0"
edition = "2021"
authors = ["OpenDBS Team"]
description = "High-performance storage engine for OpenDBS"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API bindings for Node.js
napi = "2.16"
napi-derive = "2.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
snap = "1.1"

# Memory-mapped files
memmap2 = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Parallel processing
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "5.5"

# Fuzzy search
strsim = "0.11"

# Vector operations
ndarray = "0.15"

[dev-dependencies]
criterion = "0.5"



[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true


